--- a/ubiquity/chrome/skin/skins/experimental-466hack.css
+++ b/ubiquity/chrome/skin/skins/experimental-466hack.css
@@ -1,3 +1,4 @@
-#cmd-panel {
-  background: white; /* On Mac this is changed to white, due to a rendering bug. See bug #466. */
+#ubiquity-panel {
+  /* On Mac this is changed to white, due to a rendering bug. See bug #466. */
+  background: white;
 }
