--- a/ubiquity/chrome/skin/skins/experimental.css
+++ b/ubiquity/chrome/skin/skins/experimental.css
@@ -10,26 +10,24 @@
   =/skin=
 */
 
+@-moz-document url(chrome://browser/content/browser.xul) {
 
-/* Formatting for the Ubiquity Pop-Up */
-
-#cmd-panel {
-  padding: 0px;
+#ubiquity-panel {
+  position: relative;
   width: 810px;
+  padding: 0px;
   background-color: transparent;
-
-  font-family: Geneva, Tahoma, Verdana;
-  text-shadow: #AFAFAF 0px 1px .2px;
 }
 
-#cmd-frame{
+#ubiquity-frame {
+  height: 555px;
   background-color: rgba(43,43,43,1);
   border: 1px solid #7E7E7E;
   -moz-border-radius: 10px;
 }
 
 /* The parent of the box for entering text */
-#cmd-entry-container {
+#ubiquity-entry-container {
   padding-top: 10px;
   padding-bottom: 10px;
   padding-left: 5px;
@@ -41,151 +39,153 @@
   background-image: url(chrome://ubiquity/skin/icons/cmd_entry_bg.png);
   background-position: top left;
   background-repeat: repeat-x;
-
 }
 
 /* Where text is entered */
-#cmd-entry {
+#ubiquity-entry {
   -moz-appearance: none;
   background: none;
   border: none;
-  font-size: 20pt;
+  font-size: 26px;
   color: black;
   width: 100%;
   font-family: Geneva, Tahoma, Verdana;
   text-shadow: #AFAFAF 0px 1px .2px;
 }
 
-#ubiquity-preview {
-  height: 500px;
-  width: 800px;
-
-  font-family: Geneva, Tahoma, Verdana;
-  text-shadow: #333 0px 1px .2px;
-  color: #fff;
-
-}
-
-
-#cmd-preview {
-  -moz-appearance: none;
-  background: none;
-  border: none;
-  overflow: hidden;
-  width: 800px;
-  height: 500px;
-  background: none;
-}
-
-
-div#ubiquity-preview #suggestions {
-  width: 280px;  
+#ubiquity-suggest-container {
   position: absolute;
   border-left: #232323;
-  top: 0px;
+  width: 280px;
+  height: 500px;
+  top: 56px;
   left: 0px;
-  -moz-border-radius-bottomleft: 10px;  
+  -moz-border-radius-bottomleft: 10px;
   background-color: rgba(61,61,61,1);
   background-image: url(chrome://ubiquity/skin/icons/suggestion_bd.png);
   background-position: top right;
   background-repeat: repeat-y;
+}
 
+#ubiquity-suggest {
+  -moz-appearance: none;
+  border: none;
+  width: 300px;
+  height: 500px;
+  overflow: hidden;
+}
+
+#ubiquity-preview-container {
+  position: absolute;
+  left: 300px;
+  top: 55px;
+  border-top: 1px solid #333;
+}
+
+#ubiquity-preview {
+  max-height: 500px;
+}
+
+#ubiquity-browser {
+  width: 510px;
   height: 500px;
 }
 
+#ubiquity-help {
+  padding: 0.6em;
+  text-shadow: #000 1px 1px .5px;
+  font-size: 12pt;
+  color: #fff;
+}
+
+}
+
+@-moz-document url(chrome://ubiquity/content/suggest.html) {
+
+#suggestions {
+  width: 280px;
+  margin: 0;
+  font-family: Geneva, Tahoma, Verdana;
+  text-shadow: #333 0px 1px .2px;
+  color: #fff;
+}
+
 /* below are the only Parser 2 debug changes*/
-div#ubiquity-preview #suggestions .verb {
+.verb {
   border-bottom: 2px blue solid;
 }
  
-div#ubiquity-preview #suggestions .prefix {
+.prefix {
   border-bottom: 2px orange solid;
   font-weight: bold;
 }
  
-div#ubiquity-preview #suggestions .argument {
+.argument {
   border-bottom: 2px orange solid;
 }
  
-div#ubiquity-preview #suggestions .object {
+.object {
   border-bottom: 2px black solid;
 }
 
-div#ubiquity-preview #suggestions .inactive {
+.inactive {
   color: #666;
 }
 
 /*end Parser 2 version additions*/
 
-div#ubiquity-preview #preview-pane {
-    position: absolute;
-    left: 300px;
-    top: 0px;
-    height: 500px;
-    padding: 5px;
-    border-top: 1px solid #333;
-} 
+.suggested {
+  padding: 0px;
+  font-size: 11pt;
+  padding: 5px;  
+  border: 1px solid rgba(162,162,162,1);
+  border-right: 1px solid rgba(82,82,82,1);
+  border-bottom: 1px solid rgba(82,82,82,1);
+  font-family: Geneva, Tahoma, Verdana;
+  text-shadow: #AFAFAF 0px 1px .2px;
 
-div#ubiquity-preview .suggested {
-    padding: 0px;
-    font-size: 11pt;
-    padding: 5px;  
-    border: 1px solid rgba(162,162,162,1);;
-    border-right: 1px solid rgba(82,82,82,1);;
-    border-bottom: 1px solid rgba(82,82,82,1);;
-    font-family: Geneva, Tahoma, Verdana;
-    text-shadow: #AFAFAF 0px 1px .2px;
-
-    color: #000;
-    background-color: rgba(128,128,128,1);
-    min-height: 22px;
-    overflow: hidden;
+  color: #000;
+  background-color: rgba(128,128,128,1);
+  min-height: 22px;
+  overflow: hidden;
 }
 
-div#ubiquity-preview .hilited {
-    padding: 0px;
-    font-size: 11pt;
-    padding: 5px;
-    border: none;
-    font-family: Geneva, Tahoma, Verdana;
-    text-shadow: #FFF 0px 1px .2px;
-    margin-right: -30px;
-    padding-right: 30px;
-    z-index: 5000;
-    color: #000;
-    background-image: url(chrome://ubiquity/skin/icons/selected_bg.png);
-    background-position: top left;
-    background-repeat: no-repeat;
-    min-height: 22px;
-    overflow: hidden;
+.hilited {
+  border: none;
+  margin-right: -30px;
+  padding-right: 30px;
+  z-index: 5000;
+  background-image: url(chrome://ubiquity/skin/icons/selected_bg.png);
+  background-color: transparent;
+  background-position: top left;
+  background-repeat: no-repeat;
 }
 
-div#ubiquity-preview .cmdicon {
-    display: inline-block;
-    width: 16px;
+.cmdicon {
+  display: inline-block;
+  width: 16px;
+  margin-right: 0.3em;
 }
-div#ubiquity-preview .cmdicon img {
-    vertical-align: middle;
-    width: 16px;
-    height: 16px;
-}
-
-
-
-div#ubiquity-preview .needarg {
-    font-style: oblique;
-    color: #AAA;
-    text-shadow: none;
-    font-size: 80%;
+.cmdicon img {
+  vertical-align: middle;
+  width: 16px;
+  height: 16px;
 }
 
-div#ubiquity-preview .hilited .needarg {
-    font-style: oblique;
-    color: #555;
-    font-size: 80%;
+.needarg {
+  font-style: oblique;
+  color: #AAA;
+  text-shadow: none;
+  font-size: 80%;
 }
 
-div#ubiquity-preview .selection {
+.hilited .needarg {
+  font-style: oblique;
+  color: #555;
+  font-size: 80%;
+}
+
+.selection {
   padding: 2px;
   -moz-border-radius: 3px;
   display: inline-block;
@@ -200,55 +200,57 @@ div#ubiquity-preview .selection {
   text-shadow: none;
 }
 
+}
 
 
 /* Formatting for the Preview box */
+@-moz-document url-prefix(chrome://ubiquity/content/preview.html) {
 
-.ubiquity-preview-content {
-    background: none;
-    color: #ffffff;
-    font-family: Geneva, Tahoma, Verdana;
-    text-shadow: #000 1px 1px .5px;
-    font-size: 11pt;
+body {
+  margin: 0;
+  padding: 5px;
+  color: #ffffff;
+  font-family: Geneva, Tahoma, Verdana;
+  text-shadow: #000 1px 1px .5px;
+  font-size: 11pt;
 }
 
-.ubiquity-preview-content a {
+a {
   color: #FFFFFF;
   text-decoration: underline;
   cursor: pointer;
 }
 
-.ubiquity-preview-content a:hover {
+a:hover {
   color: #A0A0A0;
 }
 
-.ubiquity-preview-content a:link {
+a:link {
   color: #FFFFFF;
 }
 
-.ubiquity-preview-content a:visited {
+a:visited {
   color: #FFFFFF;
 }
 
-.ubiquity-preview-content a:active {
+a:active {
   color: #A0A0A0;
 }
 
-.ubiquity-preview-content .help {
-}
-
-.ubiquity-preview-content .gresult {
+.gresult {
   margin-bottom: 10px;
 }
 
-.ubiquity-preview-content .gresult a {
+.gresult a {
   font-size: 14pt;
 }
-.ubiquity-preview-content .gresult-url {
+.gresult-url {
   font-size: x-small;
   color: #777;
 }
-.ubiquity-preview-content .gresult-content {
+.gresult-content {
   margin-right: 10px;
   font-size: small;  
+}
+
 }
