--- a/ubiquity/chrome/content/web-content.css
+++ b/ubiquity/chrome/content/web-content.css
@@ -289,6 +289,10 @@ ul#command-feed-graveyard ul li:last-child:after {
   content: "";
 }
 
+table {
+  border-collapse: collapse;
+}
+
 th {
   font-variant: small-caps;
   font-size: 18pt;
