Tweaked SkinSvc and moved its import from browser.js to setup.js (now a member of gServices), fixing #604.

--- a/ubiquity/chrome/skin/skins/experimental-466hack.css
+++ b/ubiquity/chrome/skin/skins/experimental-466hack.css
@@ -1,4 +1,6 @@
+@-moz-document url(chrome://browser/content/browser.xul) {
 #ubiquity-panel {
   /* On Mac this is changed to white, due to a rendering bug. See bug #466. */
   background: white;
+}
 }
