new-parser: enhancement #673: adding a displayMessage for when some verbs were skipped; marking unloaded verbs in the cmdlist as such

--- a/ubiquity/chrome/content/web-content.css
+++ b/ubiquity/chrome/content/web-content.css
@@ -143,6 +143,11 @@ em{
   cursor: pointer;
 }
 
+.command.not-loaded .name {
+  color: #bbb;
+  text-decoration: line-through;
+}
+
 .command .homepage, #skin-list .command .homepage{
 }
 
