parsers: Made them use noun.name (#706). Removed parens from .needarg for better styling.

--- a/ubiquity/chrome/skin/skins/custom.css
+++ b/ubiquity/chrome/skin/skins/custom.css
@@ -79,7 +79,21 @@
   height: 16px;
 }
 
+.object {
+
+}
+
+.argument {
+
+}
+
 .needarg {
+}
+.needarg:before {
+  content: "(";
+}
+.needarg:after {
+  content: ")";
 }
 
 .hilited .needarg {
