--- a/ubiquity/chrome/skin/skins/experimental.css
+++ b/ubiquity/chrome/skin/skins/experimental.css
@@ -172,11 +172,21 @@
   height: 16px;
 }
 
+.object, .argument {
+  font-weight: bold;
+}
+
 .needarg {
   font-style: oblique;
   color: #AAA;
   text-shadow: none;
   font-size: 80%;
+}
+.needarg:before {
+  content: "(";
+}
+.needarg:after {
+  content: ")";
 }
 
 .hilited .needarg {
