--- a/ubiquity/chrome/skin/skins/old.css
+++ b/ubiquity/chrome/skin/skins/old.css
@@ -73,9 +73,19 @@ body {
   color: #ffffff;
 }
 
+.object, .argument {
+  font-weight: bold;
+}
+
 .needarg {
   font-style: oblique;
   color: #999999;
+}
+.needarg:before {
+  content: "(";
+}
+.needarg:after {
+  content: ")";
 }
 
 .cmdicon {
