Suggestions are now selectable by click (#396). $skinlist ~= s/onclick/onchange/

--- a/ubiquity/chrome/skin/skins/default.css
+++ b/ubiquity/chrome/skin/skins/default.css
@@ -96,6 +96,7 @@
   border-left: solid 10px transparent;
   font-family: Calibri, Helvetica, Verdana, Arial;
   color: #FFF;
+  cursor: pointer;
 }
 
 .object, .argument {
