cmdlist: Sorting by feed title/date now works.

--- a/ubiquity/chrome/content/web-content.css
+++ b/ubiquity/chrome/content/web-content.css
@@ -224,6 +224,10 @@ a[onclick] {
   color: #009900;
 }
 
+.feed-date {
+  font-size: 80%;
+}
+
 .notification {
   color: blue;
   font-variant: small-caps;
