added new flag to verbs: oldAPI, for those which were written in the old API format; added "OLD API" badge to commands in the command list to encourage conversion

--- a/ubiquity/chrome/content/web-content.css
+++ b/ubiquity/chrome/content/web-content.css
@@ -339,3 +339,15 @@ div.ubiq-tutorial h2 {
   margin: 0;
   padding: 0;
 }
+
+.badge {
+  border-width: 0;
+  float: right;
+/*  position: absolute;*/
+  top: 0px;
+  right: 0px;
+}
+
+.badge a img {
+  border: none;
+}
