--- a/ubiquity/standard-feeds/templates/map.html
+++ b/ubiquity/standard-feeds/templates/map.html
@@ -4,7 +4,6 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <style>
-
     body{
       overflow: hidden;
       margin: 0px;
@@ -19,7 +18,7 @@
     }
 
     #preview-pane {
-      height: 140px;      
+      height: 140px;
     }
     #preview-pane-large {
       height: 300px;
@@ -53,6 +52,15 @@
       white-space: nowrap;
       overflow: hidden;
     }
+    .address-line > kbd {
+      font: bold 92% monospace;
+    }
+    .address-line > kbd:before {
+      content: "(";
+    }
+    .address-line > kbd:after {
+      content: ") ";
+    }
     .gaddress, .gaddress-current {
       font-size: small;
       padding: 4px 4px 4px 10px;
@@ -73,11 +81,11 @@
       color: #ffffff;
       text-decoration: none;
     }
-    
+
     /* secondary map preview */
     #selected-address {
       color: #bfbfbf;
-      font-size: medium;  
+      font-size: medium;
       padding-bottom: 5px;
       float: left;
       position: absolute;
@@ -91,13 +99,16 @@
     .map-action {
       display: none;
     }
-    .map-actions a {
+    .map-actions a, #clickee > a {
       color: #bfbfbf;
       text-decoration: underline;
       cursor: pointer;
     }
- 
-     @media print {
+    #clickee {float: left}
+    a[accesskey] {display: inline-block}
+    a[accesskey]:first-letter {font-weight: bolder}
+
+    @media print {
       .no-print{ display: none;}
     }
     </style>
@@ -115,22 +126,27 @@
       <div id="preview-pane" name="preview-pane">
         <div id="msg"></div>
         <div id="mapArea">
-          <div class="no-print"> 
+          <div class="no-print">
             <div id="selected-address"></div>
             <div class="map-actions">
-              <a onclick="window.print();" >Print</a>
+              <a onclick="window.print();" accesskey="p">Print</a>
                 &nbsp;&nbsp;|&nbsp;&nbsp;
-              <a id="send-link" >Send</a>
+              <a id="send-link" accesskey="s">Send</a>
             </div>
           </div>
           <div id="map"> </div>
           <div class="no-print">
             <div id="address-list"></div>
             <div class="map-actions">
-              <a onclick="showAddressPreview();" >Back</a>
+              <a onclick="showAddressPreview();" accesskey="b">Back</a>
                 &nbsp;&nbsp;|&nbsp;&nbsp;
-              <a class="hand" onclick="insertMap();">Insert map in page</a>
+              <a class="hand" onclick="insertMap();" accesskey="i"
+               >Insert map in page</a>
             </div>
+          </div>
+          <div id="clickee">
+            <a onclick="showMapPreview(gMap)" accesskey="c"
+             >Click to enlarge</a>
           </div>
         </div>
       </div>
@@ -142,282 +158,6 @@
     ></script>
     <script src="resource://ubiquity/scripts/jquery.js"></script>
     <script src="resource://ubiquity/scripts/content-preview.js"></script>
-    <script type="text/javascript">
-    var API_KEY = jQuery("#google-jsapi").get(0).src.split("?key=")[1];
-
-    google.load('search', '1');
-    google.load('maps', '2');
-    
-    var gLocalSearch;
-    var gMap;
-    var gSelectedResults = [];
-    var gCurrentResults = [];
-    var currentMarker;
-    var currentMarkerPoint;
-    var mapControl;
-    var mapType;
-
-    function showAddressPreview() {
-      if (document.getElementById("preview-pane-large"))
-        document.getElementById("preview-pane-large").id = "preview-pane";
-      $(".map-actions").hide();  
-      $("#selected-address").hide();
-      $(".suggestion").show();
-      $("#address-list").show();
-
-      if (document.getElementById("map-large"))
-        document.getElementById("map-large").id = "map";
-      
-      gMap.checkResize();
-      if (currentMarkerPoint)
-        gMap.panTo(currentMarkerPoint);
-
-      gMap.removeControl(mapControl);
-      gMap.removeControl(mapType);
-      gMap.disableDragging();
-      
-      Ubiquity.resizePreview(document.getElementsByName("preview-pane")[0].clientHeight);
-      
-      // this animation doesn't work since the preview pane size has to be changed from cmdutils.js
-      /* $("#preview-pane")
-        .height("300px")
-        .animate({ height: "140px" });
-      */
-      // this animation works, but looks bad since the above was taken out
-      /*
-      $("#map").animate({ 
-        width: "200px",
-        height: "130px",
-      }, 500);
-      setTimeout( function(){
-        $(".suggestion").slideDown( 500 );
-        $("#address-list").fadeIn( 700 );
-      }, 500 );
-      */
-    }
-    
-    function showMapPreview(map) {
-    
-      $("#address-list").hide();
-      $(".suggestion").hide();
-      
-      $("#selected-address").fadeIn( 300 );
-      var previewPane = document.getElementById("preview-pane");
-      if (previewPane)
-        previewPane.id = "preview-pane-large";
-      
-      gMap.addControl(mapControl);
-      gMap.addControl(mapType);
-      gMap.enableDragging();
-            
-      $("#map").animate({
-        width: "100%",
-        height: "240px",
-      }, 500);
-      setTimeout( function(){
-        $(".map-actions").fadeIn();
-        $(".suggestion").slideUp( 500 );    
-      }, 300 );
-
-      Ubiquity.resizePreview(document.getElementsByName("preview-pane")[0].clientHeight);
-      
-      if (document.getElementById("map"))
-        document.getElementById("map").id = "map-large";
-
-      gMap.checkResize();
-      gMap.panTo(currentMarkerPoint);
-
-      /*
-      $("#preview-pane-large")
-        .height("140px")
-        .animate({ height: "300px" });
-      */
-
-    }
-    
-    // initializes the map and starts the local search
-    function loadMap(searchTerm, index) {
-
-      var currentLat = geoip_latitude();
-      var currentLng = geoip_longitude();
-
-      // Initialize the map
-      gMap = new google.maps.Map2(document.getElementById("map"));
-      gMap.setCenter(new google.maps.LatLng(currentLat, currentLng), 13);
-      gMap.disableDragging();
-      mapControl = new GSmallMapControl();
-      mapType = new GMapTypeControl();
-      GEvent.addListener(gMap, "click", function() {showMapPreview(gMap);});
-      
-      // add listeners so the map knows when we change it
-      GEvent.addListener(gMap, "dragend", function() {gMap.setCenter(gMap.getCenter());});
-      GEvent.addListener(gMap, "maptypechanged", function() {gMap.setMapType(gMap.getCurrentMapType()); });
-      //GEvent.addListener(gMap, )
-
-      // Initialize the local searcher
-      gLocalSearch = new google.search.LocalSearch();
-      gLocalSearch.setCenterPoint(gMap);
-      gLocalSearch.setSearchCompleteCallback(null, function() {OnLocalSearch(searchTerm);});
-            
-      // Execute the initial search
-      gLocalSearch.execute(searchTerm);
-      
-      showAddressPreview();
-    }
-
-    // Called when Local Search results are returned
-    function OnLocalSearch(searchTerm) {
-      if (!gLocalSearch.results || gLocalSearch.results.length == 0) {
-        $("#mapArea").hide();
-        $("#msg").html( "<div>No results for \"" + searchTerm + "\"</div>" )
-        return;
-      } else {
-        $("#mapArea").show();
-        $("#msg").html( "" );
-      }
-      
-      $("#address-list").empty();
-      var searchWell = document.getElementById("address-list");
-
-      gCurrentResults = [];
-      var numToDisplay = Math.min(3, gLocalSearch.results.length);
-      for (var i = 0; i < numToDisplay; i++) {
-        gCurrentResults.push(new LocalResult(gLocalSearch.results[i]));
-      }
-            
-      // move the map to the first result
-      var first = gLocalSearch.results[0];
-      var point = new google.maps.LatLng(first.lat, first.lng);
-      
-      setMarker(point, 0);
-    }
-
-    function getStaticMapUrl() {
-      var curZoom = gMap.getZoom();
-      var curCenter = gMap.getCenter();
-
-      var url = "http://maps.google.com/staticmap?" +
-                "center=" + curCenter.lat() + "," + curCenter.lng() + "&" + 
-                "markers=" + currentMarkerPoint.lat() + "," + currentMarkerPoint.lng() + "," + "red&" +
-                "zoom=" + curZoom + "&" +
-                "size=" + $("#map-large").width() + "x" + $("#map-large").height() + "&" +
-                "key=" + API_KEY;
-
-      return url;
-    }
-
-    // A class representing a single Local Search result returned by the Google AJAX Search API.
-    function LocalResult(result) {
-      this.result_ = result;
-      this.resultNode_ = this.unselectedHtml();
-      document.getElementById("address-list").appendChild(this.resultNode_);
-    }
-
-    LocalResult.prototype.unselectedHtml = function() {
-      var container = document.createElement("div");
-      var point = new google.maps.LatLng(this.result_.lat, this.result_.lng);
-      
-      if (this.result_ == gLocalSearch.results[0]) {
-        container.className = "gaddress-current";
-        container.addEventListener("click", function() {setMarker(point, 0);}, false);
-      }
-      else if (this.result_ == gLocalSearch.results[1]) {
-        container.className = "gaddress";
-        container.addEventListener("click", function() {setMarker(point, 1);}, false);
-      }
-      else if (this.result_ == gLocalSearch.results[2]) {
-        container.className = "gaddress";
-        container.addEventListener("click", function() {setMarker(point, 2);}, false);
-      }
-        
-      $("#selected-address").text(this.result_.titleNoFormatting);
-      
-      var html = "<div class='address-line'><a>" + this.result_.title + "</a></div>" +
-                 "<div class='address-line'>" + this.result_.streetAddress + "&nbsp;" + 
-                           this.result_.city + ",&nbsp;" +
-                           this.result_.region + "&nbsp;" +
-                           //this.result_.country +
-                  "</div>";
-      this.result_.html.innerHTML = html;
-      container.appendChild(this.result_.html.cloneNode(true));
-      return container;
-    }
-
-    /* onclick for each address in the results list */
-    function setMarker(point, index) {
-      // adjust the map to the new address
-      if (currentMarker)
-        gMap.removeOverlay(currentMarker);
-      gMap.panTo(point);
-      currentMarkerPoint = point;
-      currentMarker = new GMarker(point);
-      gMap.addOverlay(currentMarker);
-
-      var curAddress = document.getElementsByClassName("gaddress-current");
-      curAddress[0].className = "gaddress";
-
-      var addresses = document.getElementsByClassName("gaddress");
-      for (var i=0; i < addresses.length; i++) {
-        if (i == index)
-          addresses[i].className = "gaddress-current";
-        else 
-          addresses[i].className = "gaddress";
-      }
-      
-      // adjust the email link
-      setEmailUrl();
-    }
-    
-    /* Currently using default mail client. */
-    /* Would be nice to include the image itself in the body */
-    function setEmailUrl() {
-      var curCenter = gMap.getCenter();
-      var curAddress = document.getElementById("selected-address").innerHTML;
-      var staticMap = "http://maps.google.com/staticmap?" +
-                        "markers=" + curCenter.lat() + "," + curCenter.lng() + "," + "red%26" +
-                        "zoom=13%26" +
-                        "size=450x240%26" + 
-                        "key=" + API_KEY;
-
-      document.getElementById("send-link").href = "mailto:?Subject=" + curAddress + "&body=" + staticMap;
-    }
-    
-    function insertMap( ) {     
-      var mapHtml = jQuery("#map").html();
-      Ubiquity.insertHtml( "<img src='" + getStaticMapUrl() + "'\>" );
-    }
-      
-    Ubiquity.onPreview = function setPreview(searchTerm) {
-      if( jQuery("#preview-pane-large").length == 1 ){
-        showAddressPreview();
-      }
-      loadMap(searchTerm.text, 0);
-    }
-        
-    </script>
-    
-    
-    
-    <script>
-      function setupTestFramework(){
-        // Test Framework
-        if( window.console ) {
-
-          var input = document.createElement("input");
-          input.value = "Enter search term here (then hit enter)";
-          $(input)
-            .css({width: 300, position: "absolute", top: 400, left: 10})
-            .click(function(){
-              jQuery(this).select();
-            })
-            .keyup(function(e) {
-              if( e.which == 13 ){
-                Ubiquity.onPreview( {text:this.value} );
-              }
-            })  
-          $("body").append(input);
-        }
-      }
-    </script>
+    <script type="application/x-javascript;version=1.8" src="map.js"></script>
   </body>
 </html>
