cmdlist: Fixed some bugs, including the one reported at <http://getsatisfaction.com/mozilla/topics/incomplete_list_of_commands>. Refactored so that the table and the graveyard can be built separately.
--HG--
extra : rebase_source : 3314ff144e709f65317cf3590344d68ce4dc208b

--- a/ubiquity/chrome/content/web-content.css
+++ b/ubiquity/chrome/content/web-content.css
@@ -206,11 +206,6 @@ a[onclick] {
   cursor: pointer;
 }
 
-.action {
-  color: #aaa;
-  cursor: pointer;
-}
-
 .error {
   color:#FF0000;
 }
@@ -225,9 +220,18 @@ a[onclick] {
   text-decoration: underline;
 }
 
-.feed-action:visited, .feed-action, .feed-action:hover {
-  color: #aaaaaa;
+.action, .action:visited, .action:hover {
+  color: #aaa;
+  cursor: pointer;
   text-decoration: none;
+}
+
+.action:before {
+  content: "[";
+}
+
+.action:after {
+  content: "]";
 }
 
 .feed-updated {
