Added toolbar buttons. Removed the old icons.
--HG--
extra : rebase_source : b11bbfe1a618fd8dc8669bb971b78bc0131e6117

--- a/ubiquity/chrome/skin/browser.css
+++ b/ubiquity/chrome/skin/browser.css
@@ -3,3 +3,12 @@
   background-color: transparent;
   border-width: 0px;
 }
+
+#ubiquity-toolbarbutton {
+  list-style-image: url("chrome://ubiquity/skin/icons/ubiquibot24.png");
+}
+toolbar[iconsize="small"] #ubiquity-toolbarbutton > .toolbarbutton-icon {
+  list-style-image: url("chrome://ubiquity/skin/icons/favicon.png");
+  width:  16px;
+  height: 16px;
+}
