cmdlist: Now dehighlights the selected sort-mode link.
--HG--
extra : rebase_source : e0f3323f93aa5233b5d637089c6776ccec3a5530

--- a/ubiquity/chrome/content/web-content.css
+++ b/ubiquity/chrome/content/web-content.css
@@ -201,8 +201,14 @@ a:hover {
   text-decoration: underline;
 }
 
-a[onclick] {
+a[onclick], .sort-switch {
   cursor: pointer;
+}
+
+.sort-switch.selected {
+  color: inherit;
+  cursor: inherit;
+  text-decoration: none;
 }
 
 .error {
