Tweaked styles to make thumbnails useful in search commands again

--- a/ubiquity/chrome/skin/skins/experimental.css
+++ b/ubiquity/chrome/skin/skins/experimental.css
@@ -288,4 +288,12 @@ a:active {
   content: "]";
 }
 
+.search-command .thumbnail {
+  float: left; margin: 5px 10px 0 0;
+}
+
+.search-command .title {
+  clear: both;
+}
+
 }
