--- a/ubiquity/chrome/skin/skins/default.css
+++ b/ubiquity/chrome/skin/skins/default.css
@@ -179,4 +179,19 @@ body {
   color: #d44;
 }
 
+.search-command kbd:before {
+  content: "[";
+}
+.search-command kbd:after {
+  content: "]";
+}
+
+.search-command .thumbnail {
+  float: left; margin: 5px 10px 0 0;
+}
+
+.search-command .title {
+  clear: both;
+}
+
 }
