Prevented PreviewBrowser from having chrome privilege by using resource:// rather than chrome:// (#714). Adjusted skins and map command for the change.

--- a/ubiquity/chrome/skin/skins/custom.css
+++ b/ubiquity/chrome/skin/skins/custom.css
@@ -1,12 +1,10 @@
 /*
   =skin=
-  
   @name Custom
   @author You
   @homepage http://www.yourpage.com
   @email you@you.com
   @license MPL/LGPL/GPL
-
   =/skin=
 */
 
@@ -106,7 +104,7 @@
 }
 
 /* Formatting for the Preview box */
-@-moz-document url(chrome://ubiquity/content/preview.html) {
+@-moz-document url(resource://ubiquity/preview.html) {
 
 body {
   margin: 0;
