--- a/ubiquity/chrome/skin/skins/experimental.css
+++ b/ubiquity/chrome/skin/skins/experimental.css
@@ -1,12 +1,10 @@
 /*
   =skin=
-  
   @name Ubiquity Evolved
   @author Stephen Horlander and Aza Raskin
   @homepage http://azarask.in
   @email aza@mozilla.com
   @license MPL/LGPL/GPL
-  
   =/skin=
 */
 
@@ -220,7 +218,7 @@
 
 
 /* Formatting for the Preview box */
-@-moz-document url(chrome://ubiquity/content/preview.html) {
+@-moz-document url(resource://ubiquity/preview.html) {
 
 body {
   margin: 0;
