s{application/x-javascript}{application/javascript}g

--- a/ubiquity/standard-feeds/templates/map.html
+++ b/ubiquity/standard-feeds/templates/map.html
@@ -158,6 +158,6 @@
     ></script>
     <script src="resource://ubiquity/scripts/jquery.js"></script>
     <script src="resource://ubiquity/scripts/content-preview.js"></script>
-    <script type="application/x-javascript;version=1.8" src="map.js"></script>
+    <script type="application/javascript;version=1.8" src="map.js"></script>
   </body>
 </html>
