toolbarbutton: s/\.png/\.ico/  s/:active/:hover/

--- a/ubiquity/chrome/skin/browser.css
+++ b/ubiquity/chrome/skin/browser.css
@@ -8,10 +8,10 @@
   list-style-image: url("chrome://ubiquity/skin/icons/ubiquibot24.png");
 }
 toolbar[iconsize="small"] #ubiquity-toolbarbutton > .toolbarbutton-icon {
-  list-style-image: url("chrome://ubiquity/skin/icons/favicon.png");
+  list-style-image: url("chrome://ubiquity/skin/icons/favicon.ico");
   width:  16px;
   height: 16px;
 }
-#ubiquity-toolbarbutton:active {
-  opacity: 0.5;
+#ubiquity-toolbarbutton:hover {
+  opacity: 0.9;
 }
